compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__bool_literals_redundant_comparison_1.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() { True != False }"
---
----- SOURCE CODE
pub fn main() { True != False }

----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:1:17
  │
1 │ pub fn main() { True != False }
  │                 ^^^^^^^^^^^^^ This is always `True`

This comparison is redundant since it always succeeds.
