compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__deprecated_constant.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n@deprecated(\"Don't use this!\")\npub const a = Nil\n\npub fn b() {\n  a\n}\n"
---
----- SOURCE CODE

@deprecated("Don't use this!")
pub const a = Nil

pub fn b() {
  a
}


----- WARNING
warning: Deprecated value used
  ┌─ /src/warning/wrn.gleam:6:3
  │
6 │   a
  │   ^ This value has been deprecated

It was deprecated with this message: Don't use this!
