compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__deprecated_function.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n@deprecated(\"Don't use this!\")\npub fn a() {\n  Nil\n}\n\npub fn b() {\n  a\n}\n        "
---
----- SOURCE CODE

@deprecated("Don't use this!")
pub fn a() {
  Nil
}

pub fn b() {
  a
}
        

----- WARNING
warning: Deprecated value used
  ┌─ /src/warning/wrn.gleam:8:3
  │
8 │   a
  │   ^ This value has been deprecated

It was deprecated with this message: Don't use this!
