compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__deprecated_list_append_syntax.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n    pub fn main() {\n      let letters = [\"b\", \"c\"]\n      [\"a\"..letters]\n    }\n        "
---
----- SOURCE CODE

    pub fn main() {
      let letters = ["b", "c"]
      ["a"..letters]
    }
        

----- WARNING
warning: Deprecated prepend syntax
  ┌─ test/path:4:11
  │
4 │       ["a"..letters]
  │           ^^ This spread should be preceded by a comma

This syntax for prepending to a list is deprecated.
When prepending an item to a list it should be preceded by a comma, like
this: `[item, ..list]`.
